--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,23 @@
   <name>bcs-superconductors</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+    <dependency>
+      <groupId>com.github.wendykierp</groupId>
+      <artifactId>JTransforms</artifactId>
+      <version>3.1</version>
+      <classifier>with-dependencies</classifier>
+  </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.2.1</version>
+        <configuration>
+          <mainClass>Main</mainClass>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
