--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
       <version>3.1</version>
       <classifier>with-dependencies</classifier>
   </dependency>
+  <dependency>
+    <groupId>org.jfree</groupId>
+    <artifactId>jfreechart</artifactId>
+    <version>1.5.3</version>
+  </dependency>
   </dependencies>
   <build>
     <plugins>
