--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,16 @@
     <artifactId>jfreechart</artifactId>
     <version>1.5.3</version>
   </dependency>
+  <dependency>
+      <groupId>org.graalvm.js</groupId>
+      <artifactId>js</artifactId>
+      <version>20.3.0</version>
+    </dependency>  
+    <dependency>
+      <groupId>org.graalvm.js</groupId>
+      <artifactId>js-scriptengine</artifactId>
+      <version>20.3.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
